Always show scrollbar to prevent layout from shifting between pages

--- a/static/main.css
+++ b/static/main.css
@@ -21,6 +21,7 @@ body {
     rgba(143, 156, 131, 1) 70%,
     rgba(121, 146, 126, 1) 100%);
   word-wrap: break-word;
+  overflow-y: scroll; /* always show scrollbar to prevent layout shifting */
 }
 
 h1, h2 {
